<resources>
    <string name="app_name">Chill Music</string>
    <string name="song">Bài hát</string>
    <string name="playlist">Danh sách phát</string>
    <string name="setting">Cài đặt</string>
    <string name="channel_media_player">Trình phát nhạc</string>
    <string name="unknown">Không rõ</string>
    <string name="volume">"Âm lượng: "</string>
    <string name="add_playlist">Thêm danh sách phát</string>
    <string name="enter_playlist_name">Tên danh sách phát</string>
    <string name="playlist_create">Khởi tạo</string>
    <string name="title_activity_settings">Cài đặt</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="library">Thư viện</string>
    <string name="music">Âm nhạc</string>
    <string name="custom">Tùy chỉnh</string>
    <string name="video">Video</string>
    <string name="help">Hỗ trợ</string>
    <string name="image">Ảnh</string>
    <string name="premium">Premium</string>
    <string name="cancel">Hủy</string>
    <string name="delete">Xóa</string>
    <string name="favorite">Yêu thích</string>

    <string-array name="lyrics_source_entries">
        <item>MusixMatch Crawl</item>
        <item>MusixMatch API</item>
        <item>Nhạc Của Tui</item>
    </string-array>

    <string-array name="lyrics_source_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>