<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_music"
            android:title="@string/music"
            android:icon="@drawable/music"
            app:showAsAction="ifRoom"
            android:checkable="true"
            android:checked="true"/>

        <item
            android:id="@+id/navigation_video"
            android:title="@string/video"
            android:icon="@drawable/library"
            app:showAsAction="ifRoom"
            android:checkable="true"/>

        <item
            android:id="@+id/navigation_image"
            android:title="@string/image"
            android:icon="@drawable/image"
            app:showAsAction="ifRoom"
            android:checkable="true"/>
    </group>
    <item android:title="@string/custom">
        <menu>
            <item
                android:id="@+id/navigation_setting"
                android:title="@string/setting"
                android:icon="@drawable/setting"
                app:showAsAction="ifRoom"
                android:checkable="false"/>
            <item
                android:id="@+id/navigation_support"
                android:title="@string/help"
                android:icon="@drawable/help"
                app:showAsAction="ifRoom"
                android:checkable="false"/>

            <item
                android:id="@+id/navigation_premium"
                android:title="@string/premium"
                android:icon="@drawable/premium"
                app:showAsAction="ifRoom"
                android:checkable="false"/>
        </menu>
    </item>
</menu>